...
import androidx. compose. ui. platform. testTag

//@Composable
//fun AiAssistantScreen() {
//    Text(
//        "AI-помічник",
//        modifier = Modifier.testTag("ai_header")
//    )
//}


@OptIn(ExperimentalMaterial3Api::class)
@Composable
...
